gitlab/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: devops
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.org/ssl-services: "gitlab"
    nginx.ingress.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
  - hosts:
    - gitlab.local
    secretName: devops-secret-tls
  rules:
  - host: gitlab.local
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 443
